[gd_scene load_steps=10 format=2]

[ext_resource path="res://UI/PauseMenu.gd" type="Script" id=1]
[ext_resource path="res://Sounds/ButtonGoClick.mp3" type="AudioStream" id=2]
[ext_resource path="res://Art/Blacknorthdemo-mLE25.otf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=2]
size = 32
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
extra_spacing_char = 2
font_data = ExtResource( 3 )

[sub_resource type="Theme" id=1]
default_font = SubResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 24
font_data = ExtResource( 3 )

[sub_resource type="Theme" id=4]
default_font = SubResource( 3 )

[sub_resource type="DynamicFont" id=5]
size = 24
font_data = ExtResource( 3 )

[sub_resource type="Theme" id=6]
default_font = SubResource( 5 )

[node name="PauseMenu" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Label" type="Label" parent="."]
margin_left = 442.0
margin_top = 61.0
margin_right = 657.0
margin_bottom = 109.0
theme = SubResource( 1 )
text = "Paused!"
align = 1

[node name="UnpauseButton" type="Button" parent="."]
margin_left = 450.0
margin_top = 234.0
margin_right = 636.0
margin_bottom = 327.0
theme = SubResource( 4 )
text = "Continue"

[node name="KwitButton" type="Button" parent="."]
margin_left = 446.0
margin_top = 380.0
margin_right = 632.0
margin_bottom = 473.0
theme = SubResource( 6 )
text = "Kwit"

[node name="ButtonClickAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )

[connection signal="pressed" from="UnpauseButton" to="." method="_on_UnpauseButton_pressed"]
[connection signal="pressed" from="KwitButton" to="." method="_on_KwitButton_pressed"]
